<resources>
    <string name="app_name">Event List</string>
    <string name="action_add_events">Add 1000 Events</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_event">Add Event</string>
    <string name="edit_event">Edit Event</string>
    <string name="empty_event_message">cannot be empty</string>
    <string name="title_hint">Title</string>
    <string name="category_hint">Enter category</string>
    <string name="description_hint">Enter description here.</string>
    <string name="menu_delete_event">Delete event</string>
    <string name="no_data">No data</string>
    <string name="loading">Loading</string>
    <string name="event_detail">Event Detail</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="ok">OK</string>
    <string name="from_is_after_to">Your from dates cannot be before your to dates.</string>
    <string name="your_date_range_is">Your date range is %1$s to %2$s!</string>
    <string name="error">Error</string>
    <string name="results">Results</string>
    <string name="category">Category:</string>
    <string name="start_time">Start Date/Time:</string>
    <string name="end_time">End Date/Time:</string>
    <string name="description">Description:</string>
    <string name="title">Title:</string>
    <string name="add_category">Add Category</string>
</resources>
