<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/title"/>
        <EditText
                android:id="@+id/add_evnet_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_hint"
                android:maxLines="1"
                android:maxLength="50"
                android:textAppearance="@style/TextAppearance.AppCompat" />
    </LinearLayout>
    <LinearLayout android:layout_width="wrap_content" android:layout_height="match_parent">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/category"/>
        <TextView android:id="@+id/add_event_category" android:text="category"  android:layout_width="match_parent" android:layout_height="wrap_content" android:textAppearance="@style/TextAppearance.AppCompat" android:padding="6dp"/>
    </LinearLayout>
    <LinearLayout android:layout_width="wrap_content" android:layout_height="match_parent">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/start_time"/>
        <TextView android:id="@+id/add_event_start_time" android:text="Please enter time" android:layout_width="match_parent" android:layout_height="wrap_content" android:textAppearance="@style/TextAppearance.AppCompat" android:padding="6dp"/>
    </LinearLayout>
    <LinearLayout android:layout_width="wrap_content" android:layout_height="match_parent">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/end_time"/>
        <TextView android:id="@+id/add_event_end_time" android:text="Please enter time" android:layout_width="match_parent" android:layout_height="wrap_content" android:textAppearance="@style/TextAppearance.AppCompat" android:padding="6dp"/>
    </LinearLayout>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/description"/>
    <EditText
        android:id="@+id/add_event_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="1000"
        android:gravity="top"
        android:hint="@string/description_hint"
        android:textAppearance="@style/TextAppearance.AppCompat"/>
</LinearLayout>

